<resources>
    <string name="sip_settings">SIP settings</string>
    <string name="sip_accounts">SIP accounts</string>
    <string name="sip_accounts_title">Accounts</string>
    <string name="sip_receive_calls">Receive incoming calls</string>
    <string name="sip_receive_calls_summary">Uses more battery life</string>
    <string name="sip_call_options_title">Use SIP calling</string>
    <string name="sip_call_options_wifi_only_title">Use SIP calling (Wi-Fi only)</string>
    <string name="sip_call_options_entry_1">For all calls when data network is available</string>
    <string name="sip_call_options_entry_2">Only for SIP calls</string>
    <string name="sip_call_options_wifi_only_entry_1">For all calls</string>
    <string name="add_sip_account">Add account</string>
    <string name="remove_sip_account">Remove account</string>
    <string name="sip_account_list">SIP accounts</string>
    <string name="saving_account">Saving the account…</string>
    <string name="removing_account">Removing the account…</string>
    <string name="sip_menu_save">Save</string>
    <string name="sip_menu_discard">Discard</string>
    <string name="alert_dialog_close">Close the profile</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="close_profile">Close</string>
    <string name="registration_status_checking_status">Checking status...</string>
    <string name="registration_status_registering">Registering…</string>
    <string name="registration_status_still_trying">Still trying…</string>
    <string name="registration_status_not_receiving">Not receiving calls.</string>
    <string name="registration_status_no_data">Account registration stopped because there is no Internet connection.</string>
    <string name="registration_status_no_wifi_data">Account registration stopped because there is no Wi-Fi connection.</string>
    <string name="registration_status_not_running">Account registration unsuccessful.</string>
    <string name="registration_status_done">Receiving calls.</string>
    <string name="registration_status_failed_try_later">Account registration unsuccessful: (%s); will try later</string>
    <string name="registration_status_invalid_credentials">Account registration unsuccessful: Incorrect username or password.</string>
    <string name="registration_status_server_unreachable">Account registration unsuccessful: Check the server name.</string>
    <string name="third_party_account_summary">This account is currently in use by the %s app.</string>
    <string name="sip_edit_title">SIP account details</string>
    <string name="sip_edit_new_title">SIP account details</string>
    <string name="domain_address_title">Server</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="display_name_title">Display name</string>
    <string name="proxy_address_title">Outbound proxy address</string>
    <string name="port_title">Port number</string>
    <string name="transport_title">Transport type</string>
    <string name="send_keepalive_title">Send keep-alive</string>
    <string name="advanced_settings">Optional settings</string>
    <string name="auth_username_title">Authentication username</string>
    <string name="auth_username_summary">Username used for authentication</string>
    <string name="default_preference_summary">&lt;Not set></string>
    <string name="display_name_summary">&lt;Same as username></string>
    <string name="optional_summary">&lt;Optional></string>
    <string name="default_port">5060</string>
    <string name="default_transport">UDP</string>
    <string name="advanced_settings_show">▷ Touch to show all</string>
    <string name="advanced_settings_hide">▽ Touch to hide all</string>
    <string name="empty_alert">"%s is required and can't be left blank."</string>
    <string name="not_a_valid_port">Port number should be within 1000 and 65534.</string>
    <string name="no_internet_available">To place a SIP call, check your Internet connection first.</string>
    <string name="no_wifi_available">You need to be connected to a Wi-Fi network for SIP calls (use the Wireless &amp; Network settings).</string>
    <string name="no_voip">SIP calling not supported</string>
    <string name="sip_system_decide">Automatic</string>
    <string name="sip_always_send_keepalive">Always send</string>
    <string name="sip_always">SIP_ALWAYS</string>
    <string name="sip_address_only">SIP_ADDRESS_ONLY</string>
    <string name="domain_address">SipDomain</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="display_name">DisplayName</string>
    <string name="proxy_address">ProxyAddress</string>
    <string name="port">Port</string>
    <string name="transport">Protocol</string>
    <string name="send_keepalive">SendKeepAlive</string>
    <string name="advanced_settings_container">advanced settings container</string>
    <string name="auth_username">AuthUserName</string>
    <string name="sip_connection_service_label">Built-in SIP calling</string>
    <string name="dialpad_0_number">0</string>
    <string name="dialpad_1_number">1</string>
    <string name="dialpad_2_number">2</string>
    <string name="dialpad_3_number">3</string>
    <string name="dialpad_4_number">4</string>
    <string name="dialpad_5_number">5</string>
    <string name="dialpad_6_number">6</string>
    <string name="dialpad_7_number">7</string>
    <string name="dialpad_8_number">8</string>
    <string name="dialpad_9_number">9</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">\#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters" />
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters" />
    <string name="dialpad_pound_letters" />
    <string name="description_dialpad_overflow">More options</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_image_button_plus">plus</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="default_notification_description">Default sound (%1$s)</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Mobile network not available</string>
    <string name="to_hint">1111:to;sip:abby@example.com:bcc;sip:bill@example.com:cc;</string>
    <string name="carrier_settings" />
    <string name="carrier_settings_menu" />
    <string name="cancel">Cancel</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting SIM network unlock…</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="phone_accounts_make_calls_with">Make calls with</string>
    <string name="phone_account_wifi_calling">Wi-Fi calling</string>
    <string name="wifi_calling_call_assistant_none">None</string>
    <string name="wifi_calling_call_assistant">Call assistant</string>
    <string name="wifi_calling_call_assistant_configure">Configure</string>
    <string name="voicemail">Voicemail</string>
    <string name="networks">Network operators</string>
    <string name="phone_account_settings">Phone account settings</string>
    <string name="call_settings">Call Settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="sum_carrier_select">Choose a network operator</string>
    <string name="cdma_system_select_title">System select</string>
    <string name="cdma_system_select_summary">Change the CDMA roaming mode</string>
    <string name="cdma_system_select_dialogtitle">System select</string>
    <string name="cdma_subscription_title">CDMA subscription</string>
    <string name="cdma_subscription_summary">Change between RUIM/SIM and NV</string>
    <string name="cdma_subscription_dialogtitle">subscription</string>
    <string name="cdma_activate_device">Activate device</string>
    <string name="carrier_settings_title">Carrier settings</string>
    <string name="callind_multi_sim">SUBS Settings</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto-retry</string>
    <string name="auto_retry_mode_summary">Enable Auto-retry mode</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="save">Save</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_provider">Service</string>
    <string name="voicemail_settings">Setup</string>
    <string name="other_settings">Other call settings</string>
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_notification_ringtone_title">Sound</string>
    <string name="enable_video_calling_title">Turn on video calling</string>
    <string name="enterName">Enter Name:</string>
    <string name="enterNumber">Enter Phone Number:</string>
    <string name="xdivert_title">X-Divert</string>
    <string name="xdivert_summary">CFNRc Settings</string>
    <string name="uplmn_list_setting_title">Preferred networks</string>
    <string name="network_id">Network ID</string>
    <string name="dialog_network_priority_title">Priority</string>
    <string name="gsm_umts_network_preferences_title">Network Mode</string>
    <string name="gsm_umts_network_preferences_dialogtitle">Network Mode</string>
    <string name="lte_recognize_summary">Two 4G/3G SIM cards are detected,you need to set the default 4G/3G SIM card:</string>
    <string name="lte_select_summary">The selected subscription will be recognized as a 4G/3G card and the other one as a 2G card.</string>
    <string name="lte_checkbox_text">Set mobile data to the selected SIM card once default 4G/3G SIM card is changed</string>
    <string name="select_ok">OK</string>
</resources>