<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enterName" />
    <EditText android:id="@id/name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="Name." android:singleLine="true">
        <requestFocus />
    </EditText>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enterNumber" />
    <EditText android:id="@id/phoneNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="Phone Number." android:inputType="phone" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <Button android:id="@id/save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" />
        <Button android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>