<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:id="@id/recognize_text" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lte_recognize_summary" />
        <RadioGroup android:id="@id/radiogroup" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@id/lte_text" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lte_select_summary" />
        <CheckBox android:id="@id/lte_checkBox" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/lte_checkbox_text" />
    </LinearLayout>
    <Button android:layout_gravity="center_horizontal" android:id="@id/select_ok_btn" android:background="@android:drawable/btn_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_ok" android:layout_weight="0.0" />
</LinearLayout>