<?xml version="1.0" encoding="utf-8"?>
<view android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/dialpad_view" android:background="@color/background_dialpad" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" class="com.android.phone.common.dialpad.DialpadView"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/digits_container" android:layout_width="fill_parent" android:layout_height="@dimen/dialpad_digits_height">
        <ImageButton android:gravity="center" android:id="@id/dialpad_overflow" android:background="@drawable/btn_dialpad_key" android:paddingLeft="@dimen/dialpad_digits_menu_left_padding" android:paddingRight="@dimen/dialpad_digits_menu_right_padding" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="@dimen/dialpad_overflow_margin" android:src="@drawable/ic_overflow_menu" android:tint="@color/dialpad_icon_tint" android:contentDescription="@string/description_dialpad_overflow" />
        <view android:textSize="@dimen/dialpad_digits_text_size" android:textStyle="normal" android:textColor="@color/dialpad_digits_text_color" android:gravity="center" android:id="@id/digits" android:background="@android:color/transparent" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:cursorVisible="false" android:maxLines="1" android:scrollHorizontally="true" android:singleLine="true" android:freezesText="true" android:layout_weight="1.0" android:textCursorDrawable="@null" android:fontFamily="sans-serif-light" ex:resizing_text_min_size="@dimen/dialpad_digits_text_min_size" class="com.android.phone.common.dialpad.DigitsEditText" xmlns:ex="http://schemas.android.com/apk/res-auto" />
        <ImageButton android:state_enabled="false" android:id="@id/deleteButton" android:background="@drawable/btn_dialpad_key" android:paddingLeft="@dimen/dialpad_digits_padding" android:paddingRight="@dimen/dialpad_digits_padding" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_dialpad_delete" android:tint="@color/dialpad_icon_tint" android:contentDescription="@string/description_delete_button" />
        <EditText android:textSize="16.0sp" android:textColor="@color/dialpad_digits_text_color" android:layout_gravity="center" android:id="@id/recipients" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:minHeight="48.0dip" android:hint="@string/to_hint" android:maxLines="3" android:maxLength="2000" android:autoText="true" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="#ffe3e3e3" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <Space android:layout_width="fill_parent" android:layout_height="@dimen/dialpad_space_above_keys" />
    <include layout="@layout/dialpad" />
    <Space android:layout_width="fill_parent" android:layout_height="8.0dip" />
</view>